added a new line as required

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   Microsoft Office 2013 (30 day trial)<br>
   McAfee LiveSafe (30 day trial)<br>
   <b>Розміри</b> - 410 x 355 x 160 мм<br>
+    <h3>Оновленна версія файлу для завантаження</h3>
 </p>
 </body>
 </html>
